--- a/xmart-frontend/src/main/resources/Offres_stages_admin.fxml
+++ b/xmart-frontend/src/main/resources/Offres_stages_admin.fxml
@@ -34,5 +34,10 @@
       <Button layoutX="485.0" layoutY="254.0" mnemonicParsing="false" onAction="#Ajouter" prefHeight="27.0" prefWidth="110.0" style="-fx-background-color: green; -fx-font-weight: bold; -fx-text-fill: white;" text="Ajouter" />
       <Button layoutX="485.0" layoutY="569.0" mnemonicParsing="false" onAction="#Supprimer" prefHeight="27.0" prefWidth="110.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;" text="Supprimer" />
       <Button layoutX="485.0" layoutY="419.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="27.0" prefWidth="110.0" style="-fx-background-color: yellow; -fx-font-weight: bold; -fx-text-fill: white;" text="Modifier" />
+      <ImageView fitHeight="48.0" fitWidth="50.0" layoutX="540.0" layoutY="725.0" onMouseClicked="#home" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@photo/home.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
