--- a/xmart-frontend/src/main/resources/Profil.fxml
+++ b/xmart-frontend/src/main/resources/Profil.fxml
@@ -2,36 +2,45 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Profil">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="603.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Profil">
    <children>
       <ImageView fitHeight="73.0" fitWidth="145.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@photo/myUp.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="80.0" layoutY="172.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Nom" />
-      <Label layoutX="80.0" layoutY="218.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Prenom" />
-      <Label layoutX="80.0" layoutY="307.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="email" />
-      <Label layoutX="80.0" layoutY="261.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Numero étudiant" />
-      <Button layoutX="233.0" layoutY="417.0" mnemonicParsing="false" onMouseClicked="#modifier" prefHeight="26.0" prefWidth="123.0" style="-fx-background-color: green; -fx-text-fill: white; -fx-font-weight: bold;" text="Modifier " />
-      <Label fx:id="nom" layoutX="236.0" layoutY="172.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
-      <Label fx:id="email" layoutX="238.0" layoutY="307.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
-      <Label fx:id="matricule" layoutX="236.0" layoutY="261.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
-      <Label fx:id="prenom" layoutX="238.0" layoutY="218.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
-      <ImageView fx:id="photo" fitHeight="130.0" fitWidth="181.0" layoutX="404.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="80.0" layoutY="261.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Nom" />
+      <Label layoutX="80.0" layoutY="307.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Prenom" />
+      <Label layoutX="80.0" layoutY="396.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="email" />
+      <Label layoutX="80.0" layoutY="350.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Numero étudiant" />
+      <Button layoutX="233.0" layoutY="506.0" mnemonicParsing="false" onMouseClicked="#modifier" prefHeight="26.0" prefWidth="123.0" style="-fx-background-color: green; -fx-text-fill: white; -fx-font-weight: bold;" text="Modifier " />
+      <ImageView fx:id="photo" fitHeight="120.0" fitWidth="181.0" layoutX="404.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="53.0" fitWidth="48.0" layoutX="386.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@photo/modifierPhoto.jpeg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="48.0" fitWidth="50.0" layoutX="536.0" layoutY="498.0" onMouseClicked="#home" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="48.0" fitWidth="50.0" layoutX="528.0" layoutY="532.0" onMouseClicked="#home" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@photo/home.png" />
          </image>
       </ImageView>
+      <TextField fx:id="nom" layoutX="254.0" layoutY="262.0" />
+      <TextField fx:id="prenom" layoutX="254.0" layoutY="308.0" />
+      <TextField fx:id="email" layoutX="254.0" layoutY="397.0" />
+      <Pane layoutX="391.0" layoutY="14.0" onMouseClicked="#modifyImage" prefHeight="160.0" prefWidth="204.0" />
+      <Label fx:id="matricule" layoutX="254.0" layoutY="350.0" prefHeight="27.0" prefWidth="187.0" text="Label">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Label fx:id="chemin" layoutX="387.0" layoutY="199.0" prefHeight="26.0" prefWidth="187.0" />
    </children>
 </AnchorPane>
