--- a/xmart-frontend/src/main/resources/CreateAccount2.fxml
+++ b/xmart-frontend/src/main/resources/CreateAccount2.fxml
@@ -20,7 +20,7 @@
       <TextField fx:id="email" layoutX="232.0" layoutY="435.0" prefHeight="26.0" prefWidth="208.0" />
       <PasswordField fx:id="mot_de_passe" layoutX="232.0" layoutY="487.0" prefHeight="26.0" prefWidth="208.0" />
       <PasswordField fx:id="cnf_mot_de_passe" layoutX="232.0" layoutY="539.0" prefHeight="26.0" prefWidth="208.0" />
-      <Button fx:id="fichier" layoutX="292.0" layoutY="594.0" mnemonicParsing="false" onMouseClicked="#fichier" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: white;" text="Parcourir ..." />
+      <Button fx:id="fichier" layoutX="230.0" layoutY="594.0" mnemonicParsing="false" onMouseClicked="#fichier" opacity="0.0" prefHeight="26.0" prefWidth="208.0" style="-fx-background-color: white;" text="Parcourir ..." />
       <Label layoutX="243.0" layoutY="681.0" onMouseClicked="#connexion2" opacity="0.0" prefHeight="18.0" prefWidth="184.0" text="Label" />
       <TextField fx:id="Matricule" layoutX="232.0" layoutY="280.0" prefHeight="26.0" prefWidth="208.0" />
       <Button fx:id="seConnecter" layoutX="232.0" layoutY="645.0" mnemonicParsing="false" onAction="#seConnecter" opacity="0.0" prefHeight="26.0" prefWidth="208.0" text="Button" />
